# Scalable-Github-Scraping-Service

./: .env  Makefile  README.md  cli.py  data_diagram.txt  pyproject.toml  step_by_step_data_flow.txt  test.db
app/: main.py  models.py
app/api/: __init__.py  routes.py
app/core/: config.py  exceptions.py  logging_config.py
app/data_access/: database.py
app/data_access/repositories/: project_repository.py  user_repository.py
app/external_services/: github_api.py
app/models/: schemas.py
app/models/database/: models.py
app/models/schemas/: __init__.py  project.py  user.py
app/services/: user_service.py
cli/: main.py
tests/: test_main.py
