[tool.poetry]
name = "github-scraper"
version = "0.1.0"
description = "A CLI tool for scraping github with RESTful API services"
authors = ["babelpainterwell <zhang.zhongw@northeastern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.4"}
typer = "^0.13.0"
httpx = "^0.27.2"
sqlalchemy = "^2.0.36"
databases = "^0.9.0"
pydantic = "^2.9.2"
sqlmodel = "^0.0.22"
pydantic-settings = "^2.6.1"
aiosqlite = "^0.20.0"
greenlet = "^3.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
